--- a/tp1/tp1.ipynb
+++ b/tp1/tp1.ipynb
@@ -3,11 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -46,12 +42,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Corregimos un dato que consideramos fue mal ingresado, por ser un orden de magniutd mayor a todos los demás y no tener punto de separación decimal, lo cual nos da la pauta de que el punto iría ubicado dejando un dígito decimal, como en todos los demás datos. Otras opciones que consideramos fueron abandonar esa muestra completa, o trabajar con el dato tal cual está."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 81,
    "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -99,10 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "### Test de t\n",
     "Los datos vienen de forma |Soleado|Nublado|Lluvia|\n",
@@ -116,11 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -139,20 +132,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Como el p-valor es muy pequeño y el estadístico es negativo, parecería haber evidencia suficiente para rechazar la hipótesis nula. Con una gran confianza podemos afirmar que los atletas corren más rápido en días soleados que en días lluviosos"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "- El cielo nublado no influye en los tiempos de los atletas.\n",
     "\n",
@@ -164,11 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -187,20 +170,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Al tener un p-valor grande, no podemos descartar la hipótesis nula. Aunque tampoco podemos afirmar que el estado del cielo no tenga influcencia sobre los tiempos de los atletas."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "- La velocidad en dı́as de lluvia es independiente del atleta.\n",
     "\n",
@@ -216,11 +193,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -292,20 +265,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "En los gráficos podemos observar claramente que hay una tendencia entre los tiempos en días nublados y soleados: atletas más lentos en días soleados, lo son también cuando hay nubes en el cielo. Por otro lado, cuando comparamos contra los días de lluvia, los datos aparecen dispersos. Veamos si, al hacer las cuentas, podemos corroborar nuestro análisis visual."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "Vemos que la correlación entre el atletas y sus velocidades en días de sol y en días con lluvia es baja. Por el contrario, la correlación es fuerte entre los dos tipos de días sin lluvia. Podemos concluir a raíz de esto que la velocidad en días de lluvia pareciera ser independiente del atleta, aunque harían falta más muestras para darle más fuerza a la hipótesis."
    ]
@@ -313,9 +280,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true,
-    "deletable": true,
-    "editable": true
+    "collapsed": true
    },
    "source": [
     "- El clima influye en la velocidad de los atletas.\n",
@@ -331,11 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tiempos_lluvia = datos[:,I_LLUVIA]\n",
@@ -358,11 +319,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "p = (np.sum([i >= diferencia_medias for i in diferencias]) + 1) / 2000000\n",
@@ -371,10 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "A pesar de usar 2 millones de permutaciones encontramos 2 que dan una diferencia de medias mayor o igual a la que vemos en los datos originales. Esto nos da suficiente confianza para afirmar que la lluvia en particular tiene influencia en los tiempos, y por lo tanto, el clima en general tiene influencia.\n",
     "\n",
@@ -383,22 +337,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
-   "source": [
-    "- ¿Qué otra conclusión obtuvo de su análisis?\n",
-    "\n",
-    "Ninguna."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "deletable": true,
-    "editable": true
-   },
+   "metadata": {},
    "source": [
     "- Consejos al Entrenador\n",
     "\n",
@@ -407,6 +346,17 @@
     "Algo que sí podemos decir es que bajo lluvia todos corren de manera similar. Uno podría afirmar que si las competencias se realizan en día lluvioso no necesariamente ganará el más rápido, por lo que prepararse para dicha eventualidad no genera tantos beneficios. Hay que aclarar que esto último es una apreciación subjetiva, no viene dada por los datos.\n",
     "\n",
     "Le diríamos al entrenador que elija a una mitad de los atletas y los entrene incluso en los días lluviosos, mientras que al otro grupo solo los soleados. Luego, midiendo sus velocidades podrá analizar si efectivamente los del primer grupo mejoraron más respecto a los del segundo."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- ¿Qué otra conclusión obtuvo de su análisis?\n",
+    "\n",
+    "A lo largo del trabajo descubrimos que incluso a partir de una muestra sorprendemente pequeña se pueden obtener conclusiones preliminares interesante. Haría falta más de datos para darle mayor solidez estadística a las ideas acá esbozadas.\n",
+    "\n",
+    "También encontramos, como en la última pregunta, que no todo lo que a uno podría interesarle se puede responder con cualquier muestra de datos. Al no tener información de los entrenamientos, por ejemplo, no podemos saber sobre su utilidad."
    ]
   }
  ],
@@ -426,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.4.5"
   }
  },
  "nbformat": 4,
