--- a/tp4/tp4.ipynb
+++ b/tp4/tp4.ipynb
@@ -567,15 +567,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Podemos ver que, a medida que eliminamos nodos centrales, la cantidad de componentes conexas aumenta hasta un punto a partir del cual comenzamos a eliminar nodos aislados (lo cual reduce su número). El tamaño de la componente conexa más grande, en cambio, disminuye considerablemente hasta un punto en el cual se destruye, quedando solo pequeños grupos de nodos aislados entre sí. Esto ocurre significativamente más rápido si ordenamos los nodos por Betweenness."
+    "Podemos ver que, a medida que eliminamos nodos centrales, la cantidad de componentes conexas aumenta hasta un punto a partir del cual comenzamos a eliminar nodos aislados (lo cual reduce su número). El tamaño de la componente conexa más grande, en cambio, disminuye considerablemente hasta un punto en el cual se destruye, quedando solo pequeños grupos de nodos aislados entre sí. Lo cual, analizando los gráficos, ocurre significativamente más rápido si ordenamos los nodos por Betweenness."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
