--- a/tp4/tp4.ipynb
+++ b/tp4/tp4.ipynb
@@ -3,7 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -45,6 +49,9 @@
    "cell_type": "code",
    "execution_count": 69,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -70,7 +77,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -137,7 +148,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "## Distribución de grado\n",
     "A partir de los gráficos, suponemos que la distribución de grado sigue la Ley de potencias. Esto se puede observar en el gráfico con escala logarítmica en el eje Y, donde se observa un decrecimiento lineal. Al tomar log-log, el gráfico se curva hacia abajo, indicando que la distribución no es exponencial"
@@ -147,6 +161,9 @@
    "cell_type": "code",
    "execution_count": 138,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -178,7 +195,11 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -221,7 +242,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Tamaños de Vecindades\n",
     "\n",
@@ -242,7 +266,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Clustering"
    ]
@@ -250,7 +277,11 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -277,7 +308,11 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -300,7 +335,11 @@
   {
    "cell_type": "code",
    "execution_count": 123,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [],
    "source": [
     "random_graph = nx.random_degree_sequence_graph(sorted(list(dict(giant_cc.degree).values())) )"
@@ -309,7 +348,11 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -345,7 +388,11 @@
   {
    "cell_type": "code",
    "execution_count": 135,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -371,7 +418,11 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -391,7 +442,11 @@
   {
    "cell_type": "code",
    "execution_count": 130,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -409,7 +464,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Podemos observar, que en el grafo aleatorio, no se produjo un efecto de clustering en los nodos. Si bien la conectividad local de los nodos es la misma, la distribución de las aristas entre ellos no favoreció la aparición de clusters. Esto se condice con lo que esperamos ver en la realidad. Los autores publican con otros autores del mismo campo, grupo de investigación o ubicación geográfica, lo cual propicia la aparición de clusters. Si todos los autores publicaran trabajos con cualquiera de los otros (como sucede en el aleatorio), la clusterización será mucho menor.\n",
     "\n",
@@ -418,14 +476,20 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "# Estrellas"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Nos interesaría poder identificar a los autores \"estrella\". Para esto analizamos varias métricas. La primera y quizás más sencilla es el grado: según esta métrica, un autor sería más \"estrella\" cuanto mayor cantidad de co-autores distintos haya tenido en su carrera. Considerando el dominio del problema podría ser una métrica razonable: si tomamos de ejemplo a Paul Erdős, matemático que definitivamente se considera \"estrella\" en su campo, vemos que tiene [511 colaboradores](https://en.wikipedia.org/wiki/Paul_Erd%C5%91s), una cifra realmente significativa.\n",
     "\n",
@@ -436,6 +500,9 @@
    "cell_type": "code",
    "execution_count": 28,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -478,7 +545,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Vemos que ambos criterios coinciden en 5 de los 10 autores \"estrella\" (aunque en distinto orden), lo cual da cuenta de cierta consistencia entre ambos. De hecho, ambos coinciden en el primer lugar.\n",
     "\n",
@@ -489,6 +559,9 @@
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true,
     "scrolled": false
    },
    "outputs": [
@@ -528,7 +601,11 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false,
+    "deletable": true,
+    "editable": true
+   },
    "outputs": [
     {
      "data": {
@@ -565,7 +642,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "Podemos ver que, a medida que eliminamos nodos centrales, la cantidad de componentes conexas aumenta hasta un punto a partir del cual comenzamos a eliminar nodos aislados (lo cual reduce su número). El tamaño de la componente conexa más grande, en cambio, disminuye considerablemente hasta un punto en el cual se destruye, quedando solo pequeños grupos de nodos aislados entre sí. Lo cual, analizando los gráficos, ocurre significativamente más rápido si ordenamos los nodos por Betweenness."
    ]
@@ -587,7 +667,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
